[fix] zoom on mobile view

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -54,7 +54,7 @@
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important; /* remove "Noto Color Emoji" */
 }
-body .mobile {
+body .mobile .main_content {
   /* font-size: 0.7rem !important;
   font-weight: 300 !important;
   line-height: 1.2 !important; */
